fix: issue with css image through webpack
Due to how we are handling our weird multi-compiler publicPath
things were getting messed up. So use a separate config for CSS
in production build to specify publicPath.

Fixes #117

--- a/examples/plugin/src/app/index.css
+++ b/examples/plugin/src/app/index.css
@@ -6,4 +6,9 @@ body {
 .site-title a {
 	color: azure !important;
 	background-color: aqua !important;
+	background-image: url('./bg.jpg');
+}
+.site-content {
+	background: url('./image.png') no-repeat top left;
+	background-size: 100px 70px;
 }
